<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="250.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="26.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/starthackmenu" android:fontFamily="@font/poppinsmedium" />
            <ImageView app:tint="@color/teal_200" android:layout_width="fill_parent" android:layout_height="20.0dip" android:src="@drawable/line1" />
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <View android:id="@+id/view_in_middle" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_centerInParent="true" />

            <LinearLayout
                android:id="@+id/launch"
                android:foreground="?selectableItemBackground"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_toLeftOf="@id/view_in_middle"
                android:backgroundTint="@color/teal_700"
                android:background="@drawable/startclr1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/start_menu"
                    android:textColor="#FFFFFF"
                    android:textSize="20.0dip"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/kill"
                android:foreground="?selectableItemBackground"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_toRightOf="@id/view_in_middle"
                android:background="@drawable/stopclr1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/stop_menu"
                    android:textColor="#ff2e343b"
                    android:textSize="20.0dip"
                    android:textStyle="bold" />
            </LinearLayout>

            <RadioGroup android:orientation="horizontal" android:gravity="center" android:id="@+id/dt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/kill">

                <RadioButton
                    android:id="@+id/Global"
                    android:layout_width="60.0dip"
                    android:layout_height="30.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_toLeftOf="@id/Korea"
                    android:background="@drawable/radio_selectornew"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:text="@string/global"
                    android:textColor="@color/white"
                    android:textSize="15.0dip" />

                <RadioButton
                    android:id="@+id/Korea"
                    android:layout_width="60.0dip"
                    android:layout_height="30.0dip"
                    android:layout_marginRight="5.0dip"
                    android:background="@drawable/radio_selectornew"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:text="@string/korea"
                    android:textColor="@color/white"
                    android:textSize="15.0dip" />
                <RadioButton android:textSize="15.0dip" android:textColor="@color/white" android:gravity="center" android:id="@+id/Vietnam" android:background="@drawable/radio_selectornew" android:layout_width="60.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" android:button="@android:color/transparent" android:text="@string/vietnam" android:layout_toRightOf="@id/Korea" android:fontFamily="@font/poppinsmedium" />
                <RadioButton android:textSize="15.0dip" android:textColor="@color/white" android:gravity="center" android:id="@+id/Taiwan" android:background="@drawable/radio_selectornew" android:layout_width="60.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" android:button="@android:color/transparent" android:text="@string/taiwan" android:layout_toRightOf="@id/Vietnam" android:fontFamily="@font/poppinsmedium" />
                <RadioButton android:textSize="15.0dip" android:textColor="@color/white" android:gravity="center" android:id="@+id/Indian" android:background="@drawable/radio_selectornew" android:layout_width="60.0dip" android:layout_height="30.0dip" android:button="@android:color/transparent" android:text="@string/indian" android:layout_toRightOf="@id/Taiwan" android:fontFamily="@font/poppinsmedium" />
            </RadioGroup>
            <RadioGroup android:orientation="horizontal" android:gravity="center" android:id="@+id/dt2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_below="@id/dt">

                <RadioButton
                    android:id="@+id/bit32"
                    android:layout_width="75.0dip"
                    android:layout_height="30.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_toLeftOf="@id/view2"
                    android:background="@drawable/radio_selectornew"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:text="@string/_32bit"
                    android:textColor="@color/white"
                    android:textSize="15.0dip" />
                <View android:id="@+id/view2" android:layout_width="2.0dip" android:layout_height="0.0dip" android:layout_centerInParent="true" />
                <RadioButton android:textSize="15.0dip" android:textColor="@color/white" android:gravity="center" android:id="@+id/bit64" android:background="@drawable/radio_selectornew" android:layout_width="75.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" android:button="@android:color/transparent" android:text="@string/_64bit" android:layout_toRightOf="@id/view2" android:checked="true" android:fontFamily="@font/poppinsmedium" />
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>